[package]
name = "cinner"
version = "0.1.2"
edition = "2021"
authors = ["CroxxN saradgaihre19@gmail.com"]
description = "C++ style std input and std output with cin and cout"
readme = "README.md"
repository = "https://github.com/CroxxN/cinner"
license = "MIT"
keywords = ["cpp", "io", "cin", "cout"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
